[sealed-classes] Incorrect unused import warning (#2608)