@@ -75,11 +75,24 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		runNegativeTest(testFiles, expectedCompilerLog, JavacTestOptions.forReleaseWithPreview("17"));
 	}
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog) {
-		runWarningTest(testFiles, expectedCompilerLog, null);
+		runWarningTest(testFiles, expectedCompilerLog, (Map<String, String>) null);
 	}
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog, Map<String, String> customOptions) {
 		runWarningTest(testFiles, expectedCompilerLog, customOptions, null);
 	}
+
+	protected void runWarningTest(String[] testFiles, String expectedCompilerLog, String expectedOutput) {
+
+		Runner runner = new Runner();
+		runner.testFiles = testFiles;
+		runner.expectedCompilerLog = expectedCompilerLog;
+		runner.expectedOutputString = expectedOutput;
+		runner.customOptions = getCompilerOptions();
+		runner.vmArguments = new String[] {"--enable-preview"};
+		runner.javacTestOptions = JavacTestOptions.forReleaseWithPreview("16");
+		runner.runWarningTest();
+	}
+
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog,
 			Map<String, String> customOptions, String javacAdditionalTestOptions) {
 
@@ -1611,7 +1624,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 					"}",
 				},
 				"----------\n" +
-				"1. ERROR in p1\\X.java (at line 7)\n" +
+				"1. ERROR in p1\\X.java (at line 6)\n" +
+				"	sealed class Y extends X permits SubInnerY {\n" +
+				"	                                 ^^^^^^^^^\n" +
+				"SubInnerY cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in p1\\X.java (at line 7)\n" +
 				"	final class SubInnerY extends Y {}\n" +
 				"	                              ^\n" +
 				"The type SubInnerY extending a sealed class A.Y should be a permitted subtype of A.Y\n" +
@@ -5715,12 +5733,17 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 					"	final class Y extends X {}\n" +
 					"}"
 				},
-				"----------\n"
-				+ "1. ERROR in X.java (at line 2)\n"
-				+ "	final class Y extends X {}\n"
-				+ "	                      ^\n"
-				+ "The type Y extending a sealed class X should be a permitted subtype of X\n"
-				+ "----------\n");
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed class X permits Y {\n" +
+				"	                              ^\n" +
+				"Y cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 2)\n" +
+				"	final class Y extends X {}\n" +
+				"	                      ^\n" +
+				"The type Y extending a sealed class X should be a permitted subtype of X\n" +
+				"----------\n");
 	}
 	public void testBug578619_1() {
 		runConformTest(
@@ -5897,6 +5920,123 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 						}
 						"""
 				},
+				"Compiled and ran fine!");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed interface X permits B {
+						    record B(int data) {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed interface X permits B {\n" +
+				"	                                  ^\n" +
+				"B cannot be resolved to a type\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_1() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed interface X permits B {
+						    record B(int data) implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed interface X permits B {\n" +
+				"	                                  ^\n" +
+				"B cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 2)\n" +
+				"	record B(int data) implements X {}\n" +
+				"	                              ^\n" +
+				"The type B that implements a sealed interface X should be a permitted subtype of X\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_2() {
+		runConformTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed interface X permits X.B {
+						    record B(int data)  implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"Compiled and ran fine!");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_3() {
+		runWarningTest(
+				new String[] {
+						"foo/X.java",
+						"""
+						package foo;
+						import foo.X.B;
+						public sealed interface X permits B {
+						    record B(int data) implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"",
+				"Compiled and ran fine!");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_4() {
+		runWarningTest(
+				new String[] {
+						"foo/X.java",
+						"""
+						package foo;
+						import foo.X.B;
+						public sealed interface X permits X.B {
+						    record B(int data) implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+
+				"----------\n"
+				+ "1. WARNING in foo\\X.java (at line 2)\n"
+				+ "	import foo.X.B;\n"
+				+ "	       ^^^^^^^\n"
+				+ "The import foo.X.B is never used\n"
+				+ "----------\n",
+
 				"Compiled and ran fine!");
 	}
 }
